--- a/Book/Base.lproj/Main.storyboard
+++ b/Book/Base.lproj/Main.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uGW-si-1Wh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11521.1" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uGW-si-1Wh">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11517.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Book View Controller-->
         <scene sceneID="1P4-ga-rc6">
             <objects>
-                <viewController id="uGW-si-1Wh" customClass="ViewController" customModule="Book" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="uGW-si-1Wh" customClass="BookViewController" customModule="Book" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qPf-9g-fZJ"/>
                         <viewControllerLayoutGuide type="bottom" id="Mat-9B-Ot4"/>
@@ -18,16 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1Ir-je-scj">
-                                <frame key="frameInset" minY="10" width="375" height="647"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LDW-BX-mKK">
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B3j-FJ-Gix">
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="qjw-Ez-5tb"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="7DH-VA-Nfu"/>
+                                    <constraint firstAttribute="bottom" secondItem="B3j-FJ-Gix" secondAttribute="bottom" id="G5V-Ts-aKt"/>
+                                    <constraint firstItem="B3j-FJ-Gix" firstAttribute="leading" secondItem="LDW-BX-mKK" secondAttribute="leading" id="iLx-A4-8mY"/>
+                                    <constraint firstAttribute="trailing" secondItem="B3j-FJ-Gix" secondAttribute="trailing" id="y1U-Fc-QCc"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1Ir-je-scj">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="NormalCell" id="Tuw-5A-onZ" customClass="BookCell" customModule="Book" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Tuw-5A-onZ" id="wGK-w7-kwn">
-                                            <frame key="frameInset" width="375" height="99.5"/>
+                                            <frame key="frameInset" width="375" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1YI-ee-dqh">
@@ -66,14 +81,69 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1Ir-je-scj" secondAttribute="trailing" id="1C4-f1-yRQ"/>
+                            <constraint firstItem="1Ir-je-scj" firstAttribute="top" secondItem="LDW-BX-mKK" secondAttribute="bottom" id="FQ9-90-g5s"/>
+                            <constraint firstItem="LDW-BX-mKK" firstAttribute="top" secondItem="eCH-pT-cPe" secondAttribute="top" id="aQ9-xm-m5W"/>
+                            <constraint firstItem="Mat-9B-Ot4" firstAttribute="top" secondItem="1Ir-je-scj" secondAttribute="bottom" id="g3h-SY-IYm"/>
+                            <constraint firstAttribute="trailing" secondItem="LDW-BX-mKK" secondAttribute="trailing" id="nCn-6Q-E8x"/>
+                            <constraint firstItem="LDW-BX-mKK" firstAttribute="leading" secondItem="eCH-pT-cPe" secondAttribute="leading" id="wQQ-Q0-d5K"/>
+                            <constraint firstItem="1Ir-je-scj" firstAttribute="leading" secondItem="eCH-pT-cPe" secondAttribute="leading" id="wiA-gu-cFl"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="searchView" destination="B3j-FJ-Gix" id="d7w-kb-V0u"/>
                         <outlet property="tableView" destination="1Ir-je-scj" id="mCl-n5-aHh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i42-HW-K2b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="85" y="129"/>
+            <point key="canvasLocation" x="84" y="128.18590704647679"/>
+        </scene>
+        <!--Book Search Controller-->
+        <scene sceneID="NUG-lH-c2n">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mbC-zY-P1m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="BookSearchController" id="NEV-sv-dpz" customClass="BookSearchController" customModule="Book" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mxf-Jz-ckL"/>
+                        <viewControllerLayoutGuide type="bottom" id="R89-ax-roY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6b2-IK-THO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2M1-kJ-IxV">
+                                <color key="backgroundColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="fxJ-ks-iU9"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9bM-jB-O6T">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="NEV-sv-dpz" id="XB5-Em-26s"/>
+                                    <outlet property="delegate" destination="NEV-sv-dpz" id="XFd-bY-Of6"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2M1-kJ-IxV" firstAttribute="top" secondItem="6b2-IK-THO" secondAttribute="top" id="3P4-7X-4cm"/>
+                            <constraint firstAttribute="bottom" secondItem="9bM-jB-O6T" secondAttribute="bottom" id="8LO-6g-Mmn"/>
+                            <constraint firstItem="9bM-jB-O6T" firstAttribute="leading" secondItem="6b2-IK-THO" secondAttribute="leading" id="R3q-bi-Zup"/>
+                            <constraint firstItem="9bM-jB-O6T" firstAttribute="top" secondItem="2M1-kJ-IxV" secondAttribute="bottom" id="VdB-Cc-4er"/>
+                            <constraint firstAttribute="trailing" secondItem="9bM-jB-O6T" secondAttribute="trailing" id="cS0-Ia-nfY"/>
+                            <constraint firstAttribute="trailing" secondItem="2M1-kJ-IxV" secondAttribute="trailing" id="mZA-i7-6nE"/>
+                            <constraint firstItem="2M1-kJ-IxV" firstAttribute="leading" secondItem="6b2-IK-THO" secondAttribute="leading" id="vGc-D4-nzF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="9bM-jB-O6T" id="hu3-NB-0IX"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="876" y="127.28635682158921"/>
         </scene>
     </scenes>
 </document>
